# TetrisConsole

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  TetrisConsole.sln  media  tetris
Konsole/: Konsole.cpp  Konsole.vcxproj  Konsole.vcxproj.filters
Konsole/source/: Common.h  Input.cpp  Menu.cpp  Menu.h  Random.cpp  Random.h  Screen.cpp  Screen.h  SoundEngine.cpp  SoundEngine.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h
Konsole/source/Graphics/: ColoredString.cpp  ColoredString.h  ColoredStringIterator.cpp  ColoredStringIterator.h  GraphicObjDescription.cpp  GraphicObjDescription.h  GraphicObject.cpp  GraphicObject.h  Graphics.cpp  Graphics.h  SymbolsLibrary.cpp  SymbolsLibrary.h  Table.cpp  Table.h  cstring.cpp  cstring.h
Konsole/source/Screen/: Screen.cpp  Screen.h  ScreenWindows.cpp  ScreenWindows.h
TetrisConsole/: Facing.cpp  Grid.cpp  Grid.h  ITetrimino.cpp  ITetrimino.h  Input.cpp  Input.h  JTetrimino.cpp  JTetrimino.h  LTetrimino.cpp  LTetrimino.h  Menu.cpp  Menu.h  OTetrimino.cpp  OTetrimino.h  Overseer.cpp  Overseer.h  Random.h  STetrimino.cpp  STetrimino.h  SoundEngine.cpp  SoundEngine.h  TTetrimino.cpp  TTetrimino.h  Tetrimino.cpp  Tetrimino.h  Tetris.cpp  Tetris.h  TetrisConsole.cpp  TetrisConsole.vcxproj  TetrisConsole.vcxproj.filters  Timer.cpp  Timer.h  Utility.cpp  Utility.h  Vector2i.cpp  ZTetrimino.cpp  ZTetrimino.h  stdafx.cpp  stdafx.h
TetrisConsole/include/: rlutil.h
TetrisConsole/source/Game/Core/: Constants.h  GameState.cpp  GameState.h  GameTypes.h
TetrisConsole/source/Game/Display/: HelpDisplay.cpp  HelpDisplay.h  HighScoreDisplay.cpp  HighScoreDisplay.h  PiecePreview.cpp  PlayfieldDisplay.cpp  ScoreDisplay.h
TetrisConsole/source/Game/Piece/: Facing.h  PieceData.cpp  PieceData.h
TetrisConsole/source/Game/Rules/: GravityPolicy.h  VariantRule.h
TetrisConsole/source/Game/Test/: TestRunner.cpp  TestRunner.h
TetrisConsole/source/Konsole/: Graphics.cpp  Graphics.h  Icon.cpp  Input.cpp  Input.h  InputLinux.cpp  InputWin32.cpp  Menu.cpp  Menu.h  Panel.cpp  Panel.h  Platform.h  PlatformLinux.cpp  PlatformWin32.cpp  Random.cpp  Random.h  SoundEngine.cpp  SoundEngine.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  Vector2i.h
TetrisConsole/source/Konsole/Platform/: Input.cpp  Input.h  InputLinux.cpp  InputWin32.cpp  Platform.h  PlatformLinux.cpp  PlatformWin32.cpp
TetrisConsole/source/Konsole/UI/: Color.h  Icon.cpp  Icon.h  Menu.cpp  Menu.h  Panel.cpp  Panel.h  RowDrawContext.cpp  RowDrawContext.h
TetrisConsole/source/Konsole/Util/: Random.h  SoundEngine.cpp  SoundEngine.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  Vector2i.h
TetrisConsole/source/Tetris/: Constants.h  Facing.cpp  Facing.h  GameController.cpp  GameController.h  GameRenderer.cpp  GameRenderer.h  GameState.cpp  GameState.h  GravityPolicy.cpp  GravityPolicy.h  HelpDisplay.cpp  HelpDisplay.h  HighScoreDisplay.cpp  HighScoreDisplay.h  ITetrimino.cpp  ITetrimino.h  InputSnapshot.h  JTetrimino.cpp  JTetrimino.h  LTetrimino.cpp  LTetrimino.h  LockDownPolicy.cpp  LockDownPolicy.h  OTetrimino.cpp  OTetrimino.h  Overseer.cpp  PieceData.cpp  PieceData.h  PieceDisplay.cpp  PieceDisplay.h  PiecePreview.cpp  PiecePreview.h  PlayfieldDisplay.cpp  PlayfieldDisplay.h  STetrimino.cpp  STetrimino.h  ScoreDisplay.cpp  ScoreDisplay.h  TTetrimino.cpp  (+8 more)
TetrisConsole/source/Tetris/Core/: Constants.h  GameController.cpp  GameController.h  GameMenus.cpp  GameMenus.h  GameRenderer.cpp  GameRenderer.h  GameState.cpp  GameState.h  GameTypes.h  InputSnapshot.h  LineClear.cpp  LineClear.h  PieceMovement.cpp  PieceMovement.h  Tetris.cpp  Tetris.h  TetrisConsole.cpp
TetrisConsole/source/Tetris/Display/: Confetti.cpp  Confetti.h  HelpDisplay.cpp  HelpDisplay.h  HighScoreDisplay.cpp  HighScoreDisplay.h  PieceDisplay.cpp  PieceDisplay.h  PiecePreview.cpp  PiecePreview.h  PlayfieldDisplay.cpp  PlayfieldDisplay.h  ScoreDisplay.cpp  ScoreDisplay.h
TetrisConsole/source/Tetris/Piece/: Facing.cpp  Facing.h  PieceData.cpp  Tetrimino.cpp  Tetrimino.h
TetrisConsole/source/Tetris/Rules/: GoalPolicy.cpp  GoalPolicy.h  GravityPolicy.cpp  GravityPolicy.h  LockDownPolicy.cpp  LockDownPolicy.h  ScoringRule.cpp  ScoringRule.h  VariantRule.cpp  VariantRule.h
TetrisConsole/source/Tetris/Test/: TestRunner.cpp  TestRunner.h
Tetrominos/include/: rlutil.h
Tetrominos/source/Core/: GameMenus.h  GameState.cpp  GameState.h  InputSnapshot.h  SecureValue.h  Tetrominos.cpp  Tetrominos.h  TetrominosConsole.cpp  TetrominosGame.h
Tetrominos/source/Display/: PieceDisplay.cpp  PieceDisplay.h
Tetrominos/source/Game/Core/: GameMenus.cpp  GameRenderer.cpp  LineClear.cpp  PieceMovement.cpp  PieceMovement.h  TetrominosConsole.cpp  TetrominosGame.cpp
Tetrominos/source/Game/Display/: Confetti.cpp  PlayfieldDisplay.h  ScoreDisplay.cpp
Tetrominos/source/Game/Piece/: Facing.cpp  Tetrimino.cpp
Tetrominos/source/Game/Rules/: ScoringRule.h
Tetrominos/source/Konsole/Core/: GameEngine.cpp  GameEngine.h
Tetrominos/source/Konsole/Platform/: Input.cpp  Platform.h  PlatformLinux.cpp  PlatformWin32.cpp
Tetrominos/source/Konsole/UI/: Menu.cpp  Menu.h  Panel.cpp  Panel.h  RowDrawContext.cpp  RowDrawContext.h
Tetrominos/source/Konsole/Util/: Random.h  SoundEngine.cpp  Vector2i.h
Tetrominos/source/Rules/: GoalPolicy.cpp  GravityPolicy.cpp  ScoringRule.cpp
scripts/: embed_media.py
